# cppSimpleModel

./: .gitignore  .zenodo.json  .zenodo.json.license  CITATION.cff  CMakeLists.txt  README.md
.github/workflows/: cpp_simple_model.yaml
data/: seirs_config.yaml  seirs_config_windows.yaml
include/: simpleModel.hxx
src/: CMakeLists.txt  simpleModel.cxx
